[package]
name = "klassify"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "*"
clap = { version = "*", features = ["derive"] }
csv = "*"
env_logger = "*"
libc = "*"
log = "*"
needletail = "*"
perbase = "*"
rayon = "*"
rust-htslib = { version = "0.38" }
serde = { version = "*", features = ["derive"] }
smartstring = "*"

[[bin]]
name = "klassify"
path = "src/main.rs"
