[package]
name = "klassify"
description = "Classify chimeric reads based on unique kmer contents"
license-file = "LICENSE"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "*"
clap = { version = "*", features = ["derive"] }
csv = "*"
env_logger = "*"
flate2 = "*"
libc = "*"
log = "*"
needletail = "*"
rayon = "*"
rust-htslib = "0.46"
serde = { version = "*", features = ["derive"] }

[[bin]]
name = "klassify"
path = "src/main.rs"
