[package]
name = "klassify"
description = "Classify chimeric reads based on unique kmer contents"
license-file = "LICENSE"
version = "0.1.2"
edition = "2021"

[dependencies]
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
env_logger = "0.11"
flate2 = "1.0"
libc = "0.2"
log = "0.4"
needletail = "0.5"
rayon = "1.10"
rust-htslib = "0.46"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "klassify"
path = "src/main.rs"
